<resources>
    <!--<string name="app_name">找空位</string>-->
    <string name="app_name">订水系统</string>
    <string name="space"> </string>

    <string name="go_now">跳过</string>
    <string name="enter">确定</string>
    <string name="cancel">取消</string>

    <string name="username_hint">用户名</string>
    <string name="password_hint">密码</string>
    <string name="login">登录</string>
    <string name="forget_password">忘记密码</string>
    <string name="abc">|</string>
    <string name="to_register">注册用户</string>

    <string name="register">注册</string>
    <string name="number_init">10086100866</string>
    <string name="enter_password_hint">确认密码</string>
    <string name="input_username">请输入手机号码</string>
    <string name="input_password">请输入密码</string>

    <string name="content">主页</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open"> Drawer is opened </string>
    <string name="drawer_close">Drawer is closed </string>
    <string name="mine">个人信息</string>
    <string name="setting">应用设置</string>
    <!--<string name="find">查找空位</string>-->
    <string name="find">订购水票</string>

    <string name="user_image">头像</string>
    <string name="modify_pwd">修改密码</string>
    <string name="please_input_old_pwd">请输入原密码</string>
    <string name="please_input_new_pwd">请输入新密码</string>
    <string name="please_input_new_pwd_again">再次输入新密码</string>
    <string name="modify">修改</string>
    <string name="update_name">更改姓名</string>
    <string name="please_input_name">请输入您的姓名</string>
    <string name="name">姓名</string>
    <string name="old_phone">原手机号</string>
    <string name="new_phone">新手机号</string>
    <string name="submit">提交</string>

    <!--<string name="start_find">开始查找</string>-->
    <!--<string name="select_library">选择图书馆</string>-->
    <!--<string name="select_floor">选择楼层</string>-->
    <!--<string name="select_room">选择区域</string>-->

    <string name="right_arrow"> > </string>

    <!-- 以下是改为订水系统时使用的 String 资源 -->
    <string name="welcomeInfo">珠院订水</string>

    <string name="start_find">开始订购</string>
    <string name="select_library">选择宿舍楼</string>
    <string name="select_floor">选择楼层</string>
    <string name="select_room">选择房间</string>



</resources>
