<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context="com.qfdqc.views.demo.RegisterPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="28sp"
        android:hint="@string/input_password" />

    <TextView
        android:id="@+id/show_register_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:textSize="24sp"
        android:text="@string/number_init" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:hint="@string/password_hint"
        android:background="@drawable/et_bg"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/register_enter_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="20sp"
        android:hint="@string/enter_password_hint"
        android:background="@drawable/et_bg"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <Button
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:text="@string/register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

</LinearLayout>
