<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="6dp"
    android:background="#DDD">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/select_library"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/library_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EEF">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/select_floor"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/floor_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EEF">
    </Spinner>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/select_room"
        android:textSize="16sp"/>

    <Spinner
        android:id="@+id/room_spinner"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#EEF">
    </Spinner>

    <Button
        android:id="@+id/start_find"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary"
        android:text="@string/start_find"
        android:textColor="#FFF"
        android:textSize="30sp" />

</LinearLayout>