<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.qfdqc.views.demo.ModifyPhoneActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="20dp" />

    <TextView
        android:id="@+id/tv_old_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:text="@string/space"/>

    <EditText
        android:id="@+id/old_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:hint="@string/old_phone"
        android:textSize="20sp"
        android:inputType="phone" />

    <TextView
        android:id="@+id/tv_new_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textColor="@color/blue"
        android:textSize="16sp"
        android:text="@string/space"/>

    <EditText
        android:id="@+id/new_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="16dp"
        android:hint="@string/new_phone"
        android:textSize="20sp"
        android:inputType="phone" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="28dp" />

    <Button
        android:id="@+id/modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:clickable="false"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:text="@string/submit" />

</LinearLayout>
