<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.qfdqc.views.demo.ModifyPasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <EditText
        android:id="@+id/old_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:hint="@string/please_input_old_pwd"
        android:background="@drawable/et_bg"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:hint="@string/please_input_new_pwd"
        android:background="@drawable/et_bg"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="12dp" />

    <EditText
        android:id="@+id/new_password_again"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:textSize="18sp"
        android:hint="@string/please_input_new_pwd_again"
        android:background="@drawable/et_bg"
        android:inputType="textPassword" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="28dp" />

    <Button
        android:id="@+id/modify_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg_gray"
        android:clickable="false"
        android:textColor="#FFF"
        android:textSize="20sp"
        android:text="@string/modify" />

</LinearLayout>
